--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -81,25 +81,41 @@ jobs:
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
 
+      - name: Set platform name
+        id: platform
+        run: |
+          SAFE_PLATFORM=$(echo "${{ matrix.platform }}" | sed 's|/|-|g')
+          echo "name=$SAFE_PLATFORM" >> $GITHUB_OUTPUT
+
       - name: Upload digest
         if: github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: digests
+          name: digests-${{ steps.platform.outputs.name }}
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
 
+  merge-artifacts:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: digests
+          pattern: digests-*
+
   merge:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [merge-artifacts]
     permissions:
       contents: read
       packages: write
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: digests
           path: /tmp/digests
@@ -206,25 +222,41 @@ jobs:
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/addon-digests/${digest#sha256:}"
 
+      - name: Set platform name
+        id: platform
+        run: |
+          SAFE_PLATFORM=$(echo "${{ matrix.platform }}" | sed 's|/|-|g')
+          echo "name=$SAFE_PLATFORM" >> $GITHUB_OUTPUT
+
       - name: Upload digest
         if: github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: addon-digests
+          name: addon-digests-${{ steps.platform.outputs.name }}
           path: /tmp/addon-digests/*
           if-no-files-found: error
           retention-days: 1
 
+  merge-addon-artifacts:
+    runs-on: ubuntu-latest
+    needs: [build-addon]
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: addon-digests
+          pattern: addon-digests-*
+
   merge-addon:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    needs: [build-addon]
+    needs: [merge-addon-artifacts]
     permissions:
       contents: read
       packages: write
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: addon-digests
           path: /tmp/addon-digests
