--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -55,7 +55,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.IMAGE_NAME }}
 
       - name: Log in to Container registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -68,14 +67,13 @@ jobs:
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          push: ${{ github.event_name != 'pull_request' }}
-          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
+          push: true
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Export digest
-        if: github.event_name != 'pull_request'
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
@@ -88,7 +86,6 @@ jobs:
           echo "name=$SAFE_PLATFORM" >> $GITHUB_OUTPUT
 
       - name: Upload digest
-        if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: digests-${{ steps.platform.outputs.name }}
@@ -107,7 +104,6 @@ jobs:
           pattern: digests-*
 
   merge:
-    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [merge-artifacts]
     permissions:
@@ -194,7 +190,6 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.ADDON_IMAGE_NAME }}
 
       - name: Log in to Container registry
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -208,15 +203,14 @@ jobs:
           context: .
           platforms: ${{ matrix.platform }}
           file: hassio-addon/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.ADDON_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
+          push: true
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.ADDON_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
           build-args: BUILD_FROM=ghcr.io/hassio-addons/base:14.2.2
           cache-from: type=gha
           cache-to: type=gha,mode=max
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Export digest
-        if: github.event_name != 'pull_request'
         run: |
           mkdir -p /tmp/addon-digests
           digest="${{ steps.build.outputs.digest }}"
@@ -229,7 +223,6 @@ jobs:
           echo "name=$SAFE_PLATFORM" >> $GITHUB_OUTPUT
 
       - name: Upload digest
-        if: github.event_name != 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: addon-digests-${{ steps.platform.outputs.name }}
@@ -248,7 +241,6 @@ jobs:
           pattern: addon-digests-*
 
   merge-addon:
-    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [merge-addon-artifacts]
     permissions:
