--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "prebuild": "npm run clean"
   },
   "dependencies": {
-    "mqtt": "^5.3.5"
+    "mqtt": "^5.3.5",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
     "@types/mqtt": "^2.5.0",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.11.0",
+    "@types/node-fetch": "^2.6.12",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "rimraf": "^5.0.5"
+    "typescript": "^5.3.3"
   }
 }
