--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -1,5 +1,5 @@
 name: "Hame Relay"
-version: "1.1.11"
+version: "1.2.0"
 slug: "hame_relay"
 description: "Connect B2500 storage to Home Assistant while keeping mobile app functionality"
 url: "https://github.com/tomquist/hame-relay"
@@ -16,6 +16,7 @@ services:
 watchdog: "http://[HOST]:[PORT:8080]/health"
 options:
   inverse_forwarding: false
+  default_broker_id: hame-2024
   devices:
     - device_id: "24-digit-device-id"
       mac: "maccaddresswithoutcolons"
@@ -23,6 +24,7 @@ options:
 schema:
   mqtt_uri: str?
   inverse_forwarding: bool?
+  default_broker_id: str?
   username: str?
   password: password?
   devices:
