--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main", "develop" ]
     tags: [ "*.*.*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
 
 env:
   REGISTRY: ghcr.io
@@ -58,6 +58,7 @@ jobs:
             type=raw,value=next,enable=${{ github.ref == 'refs/heads/develop' }}
 
       - name: Log in to Container registry
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -70,8 +71,8 @@ jobs:
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          push: true
-          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          push: ${{ github.event_name != 'pull_request' }}
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -97,6 +98,7 @@ jobs:
           retention-days: 1
 
   merge-artifacts:
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [build]
     steps:
@@ -107,6 +109,7 @@ jobs:
           pattern: digests-*
 
   merge:
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [merge-artifacts]
     permissions:
@@ -198,6 +201,7 @@ jobs:
             type=raw,value=next,enable=${{ github.ref == 'refs/heads/develop' }}
 
       - name: Log in to Container registry
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -211,8 +215,8 @@ jobs:
           context: .
           platforms: ${{ matrix.platform }}
           file: hassio-addon/Dockerfile
-          push: true
-          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.ADDON_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          push: ${{ github.event_name != 'pull_request' }}
+          outputs: type=image,name=${{ env.REGISTRY }}/${{ steps.lower-repo.outputs.ADDON_IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
           build-args: BUILD_FROM=ghcr.io/hassio-addons/base:14.2.2
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -239,6 +243,7 @@ jobs:
           retention-days: 1
 
   merge-addon-artifacts:
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [build-addon]
     steps:
@@ -249,6 +254,7 @@ jobs:
           pattern: addon-digests-*
 
   merge-addon:
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: [merge-addon-artifacts]
     permissions:
