Let home assistant config point to next image

--- a/hassio-addon/config.yaml
+++ b/hassio-addon/config.yaml
@@ -1,5 +1,5 @@
 name: "Hame Relay"
-version: "1.2.0"
+version: "next"
 slug: "hame_relay"
 description: "Connect B2500 storage to Home Assistant while keeping mobile app functionality"
 url: "https://github.com/tomquist/hame-relay"
@@ -25,7 +25,7 @@ options:
 schema:
   mqtt_uri: str?
   inverse_forwarding: bool?
-  default_broker_id: str?
+  default_broker_id: list(hame-2024|hame-2025)?
   log_level: list(trace|debug|info|warn|error|fatal)?
   username: str?
   password: password?
