Move brokers.json under / (#58)
* Move brokers config to src

* Fix brokers.json ref

--- a/hassio-addon/Dockerfile
+++ b/hassio-addon/Dockerfile
@@ -13,9 +13,6 @@ RUN npm ci
 # Copy source code
 COPY src/ ./src/
 
-# Copy brokers configuration
-COPY config/brokers.json ./config/brokers.json
-
 # Build the application
 RUN npm run build
 
@@ -40,7 +37,7 @@ COPY --from=builder /build/node_modules ./node_modules
 COPY --from=builder /build/dist/ ./dist/
 
 # Copy brokers configuration
-COPY --from=builder /build/config/brokers.json ./config/brokers.json
+COPY brokers.json ./brokers.json
 
 # Copy certificates
 COPY certs/ ./certs/
