--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "node --loader ts-node/esm src/main.ts",
+    "dev": "tsx src/main.ts",
     "clean": "rimraf dist",
     "prebuild": "npm run clean"
   },
@@ -21,7 +21,7 @@
     "@types/mqtt": "^2.5.0",
     "@types/node": "^20.11.0",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3"
   }
 }
