--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "hame-relay",
   "version": "1.2.0",
   "description": "MQTT message forwarder between brokers",
+  "type": "module",
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "dev": "tsx src/main.ts",
     "clean": "rimraf dist",
     "prebuild": "npm run clean"
   },
   "dependencies": {
     "mqtt": "^5.3.5",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "^3.3.2",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@types/mqtt": "^2.5.0",
     "@types/node": "^20.11.0",
-    "@types/node-fetch": "^2.6.12",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.3.3"
   }
 }
